# 4D-Game

./: .gitignore  Cargo.toml  README.md  build.rs  dump.txt  plan.txt
Resources/: dev_options.json  options.json
Resources/shaders/: default.frag  default.vert  default_3D.vert  default_sliced_3D.vert  simple.frag  single_color.frag  sliced_3D.geom  unlit_single_color.frag
Resources/shaders/3D/: chessboard.frag  chessboard_skeleton.frag  default.vert  default_pre_geometry.vert  default_sliced.vert  lighting.glsl  single_color.frag  single_color_skeleton.frag  skeleton.geom  sliced.geom  vertex_general.glsl
Resources/shaders/4D/: chessboard.frag  chessboard_skeleton.frag  default_sliced.vert  lighting.glsl  pre_fragment.vert  pre_geometry.vert  single_color.frag  single_color_skeleton.frag  sliced.geom  vertex_general.glsl
Resources/shaders/debug/: depth_vis.frag
Resources/shaders/simple/: blit.frag  blit.vert
src/: clock.rs  combinations.rs  errors.rs  events.rs  game.rs  global_data.rs  info_screen.rs  main.rs  options.rs  renderer.rs
src/C/: gpu_select.c
src/events/: input.rs
src/game/: player.rs  transform.rs  world.rs
src/game/transform/: affine_transform.rs  rotation.rs
src/renderer/: abstract_material.rs  alternate_target.rs  mesh.rs  projection_matrices.rs  render_target.rs  renderable_object.rs  shaders.rs  shading.rs  text_rendering.rs  uniform.rs  world_rendering.rs
src/renderer/mesh/: isosurface.rs  mesh_edit.rs  primitives.rs  subdivide.rs  vertex.rs
src/renderer/mesh/isosurface/: get_vertex.rs  sample_cloud.rs
src/renderer/mesh/isosurface/sample_cloud/: border_pair.rs  initial_border_pair.rs
src/renderer/mesh/primitives/: cube.rs  quad.rs  sphere.rs
src/renderer/shading/: abstract_material.rs  glsl_conversion.rs  materials.rs  shaders.rs  uniform.rs
(+1 files in other folders)
